feat(payment): publish payment domain events to Kafka
Adds a Kafka bridge for the write side: PaymentEventKafkaPublisher runs on
its own Axon tracking processor (payment-kafka-publisher) rather than the
existing subscribing default, since only a tracking processor is guaranteed
to see an event after it's durably stored in the Mongo event store rather
than in-process with the committing unit of work.

Twelve typed, versioned payload records map onto five Kafka topics
(payment-initiated/charged/completed/failed plus a new payment-refunded for
the refund sub-lifecycle - see ADR-002). Publishing is fire-and-forget, no
blocking on the command path; reliability comes from idempotent producer
config with bounded retries, not an outbox table.

Along the way, fixed three pre-existing bugs this task's integration test
was the first to actually exercise: Money's isPositive()/isZero() leaking
into event JSON and breaking aggregate reload, the deprecated
spring.data.mongodb.uuid-representation property silently no-op'ing, and
XStream's token-store serialization needing --add-opens under Java 21+.

Adds two knowledge entries: adr-002-payment-kafka-topic-mapping and
axon-subscribing-vs-tracking-durability.